--- a/index.htm
+++ b/index.htm
@@ -181,7 +181,8 @@
                     <!--block_content 開始-->
                     <div class="block_content">
                     	<p class="process">
-                        	<img src="images/process.jpg" alt="">
+                        	<img class="pc" src="images/process.jpg" alt="">
+                            <img class="m" src="images/process_m.jpg" alt="">
                         </p>
                     </div>
                     <!--block_content 結束-->
