--- a/index.htm
+++ b/index.htm
@@ -47,27 +47,27 @@
                     	<!--part_list_1 開始-->
                     	<div class="part_list_1 clearfix">
                         	<!--組 開始-->
-                            <div class="piece">
+                            <div class="piece clearfix">
                             	<h3 class="icon_1">維修電視</h3>
                                 <p>電視機</p>
                                 <p>液晶電視</p>
                             </div>
                             <!--組 結束-->
                             <!--組 開始-->
-                            <div class="piece">
+                            <div class="piece clearfix">
                             	<h3 class="icon_2">維修冰箱</h3>
                                 <p>電冰箱</p>
                             </div>
                             <!--組 結束-->
                             <!--組 開始-->
-                            <div class="piece">
+                            <div class="piece clearfix">
                             	<h3 class="icon_3">維修洗衣機</h3>
                                 <p>洗衣機</p>
                                 <p>乾衣機</p>
                             </div>
                             <!--組 結束-->
                             <!--組 開始-->
-                            <div class="piece">
+                            <div class="piece clearfix">
                             	<h3 class="icon_4">維修冷氣</h3>
                                 <p>除濕機</p>
                                 <p>冷氣機</p>
@@ -199,7 +199,7 @@
     <div class="footer">
     	<!--inner 開始-->
         <div class="inner">
-        	<p>營業時間： 週一~週六</br>
+        	<p>營業時間： 週一~週六<br>
 				  08:00-18:00</p>
             <p>客服專線： 02-2735-1257	</p>
             <p>客服信箱：v100ya@yahoo.com.tw</p>
