--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,21 @@
 <title>一百家電</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 <link rel="stylesheet" type="text/css" href="css/master.css">
+<script src="js/jquery.js"></script>
+<script src="js/waypoints.js"></script>
+<script>
+$(function(){
+
+ 	$("#s1").css({"opacity":"0"});
+	$('#s1').waypoint(function(event, direction)
+		{
+			$("#s1").animate({"opacity":"1"})
+		},
+		{offset: "bottom-in-view"}
+	);
+})
+	
+</script>
 </head>
 
 <body>
@@ -18,8 +33,8 @@
             <p class="slogan">縱橫北市與新北市多年，服務過的客戶不計其數信用有口皆碑。真誠的態度，專業的背景，以及貼心的服務，一百家電是值得您放心的好選擇。</p>
             <!--scroll_d 開始-->
             <div class="scroll_d">
-            	<img class="mouse" src="" alt="">
-                <img class="arrow" src="" alt="">
+            	<img class="mouse" src="images/mouse.svg" alt="">
+                <img class="arrow slideDown" src="images/arrow.svg" alt="">
                 <span>看更多</span>
             </div>
             <!--scroll_d 結束-->
@@ -34,7 +49,7 @@
         	<!--inner 開始-->
         	<div class="inner">
             	<!--block_1 開始-->
-            	<div class="block block_1">
+            	<div class="block block_1" id="s1">
                 	<!--block_title 開始-->
                     <div class="block_title clearfix">
                     	<i class="fa fa-cog"></i>
@@ -91,7 +106,7 @@
         	<!--inner 開始-->
         	<div class="inner">
             	<!--block_1 開始-->
-            	<div class="block_1">
+            	<div class="block_1" id="s2">
                 	<!--block_title 開始-->
                     <div class="block_title clearfix">
                     	<i class="fa fa-cog"></i>
@@ -170,7 +185,7 @@
         	<!--inner 開始-->
         	<div class="inner">
             	<!--block_1 開始-->
-            	<div class="block_1">
+            	<div class="block_1" id="s3">
                 	<!--block_title 開始-->
                     <div class="block_title clearfix">
                     	<i class="fa fa-cog"></i>
@@ -196,7 +211,7 @@
     <!--container 結束-->
     
     <!--footer 開始-->
-    <div class="footer">
+    <div class="footer" id="s4">
     	<!--inner 開始-->
         <div class="inner">
         	<p>營業時間： 週一~週六<br>
