meta keyword ga

--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>一百家電</title>
+<title>一百家電|各廠牌家電維修</title>
+<meta name="description" content="台北市與新北市各類家電維修，真誠的態度，專業的背景，以及貼心的服務，一百家電是值得您放心的好選擇" />
+<meta name="keywords" content="家電維修, 電器修理, 修理電視, 家電修理, 到府 維修, 電視 維修 台北" />
+
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 <link rel="stylesheet" type="text/css" href="css/master.css">
 <script src="js/jquery.js"></script>
@@ -40,6 +43,17 @@ $(function(){
 });
 
 	
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-83976236-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 </head>
 
