--- a/index.htm
+++ b/index.htm
@@ -65,7 +65,10 @@ $(function(){
     	<div class="inner">
         	<h1>一百家電連鎖維修中心</h1>
             <h2>專業維修 / 服務用心 / 品質保證</h2>
-            <p class="slogan">縱橫北市與新北市多年，服務過的客戶不計其數信用有口皆碑。真誠的態度，專業的背景，以及貼心的服務，一百家電是值得您放心的好選擇。</p>
+            <p class="slogan">縱橫北市與新北市多年，服務過的客戶不計其數信用有口皆碑。真誠的態度，專業的背景，以及貼心的服務，一百家電是值得您放心的好選擇。<br>
+<span>維修專線:<br>
+(北市)02-2720-1388  (北縣)02-2955-2019</span></p>
+            
             <!--scroll_d 開始-->
             <div class="scroll_d">
             	<img class="mouse" src="images/mouse.svg" alt="">
