--- a/index.htm
+++ b/index.htm
@@ -66,8 +66,7 @@ $(function(){
         	<h1>一百家電連鎖維修中心</h1>
             <h2>專業維修 / 服務用心 / 品質保證</h2>
             <p class="slogan">縱橫北市與新北市多年，服務過的客戶不計其數信用有口皆碑。真誠的態度，專業的背景，以及貼心的服務，一百家電是值得您放心的好選擇。</p>
-            <span>維修專線:<br>
-(台北市) 2720-1388<br>(新北市) 2955-2019</span>
+            <span>服務專線:<br>02-27203572<br>02-27201388</span>
             <!--scroll_d 開始-->
             <div class="scroll_d">
             	<img class="mouse" src="images/mouse.svg" alt="">
@@ -251,8 +250,7 @@ $(function(){
     <div class="footer" id="s4">
     	<!--inner 開始-->
         <div class="inner">
-        	<p>營業時間： 週一~週六<br>
-				  9:00-18:00</p>
+        	<p>營業時間： 週一~週六<br>9:00-18:00</p>
             <p>客服專線： 02-2720-3572</p>
             <p>客服信箱：v100ya@yahoo.com.tw</p>
             <p class="copy">一百家電 版權所有 all right reserved</p>
